# qlet

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
examples/01_simple_example/: example.py
qlet/: __init__.py
qlet/__test/ncomps/core/: test_item.py
qlet/comps/: qimage.py  qitem.py  qtext.py
qlet/ncomps/: _item.py  _typing_shortcut.py  q_item.py  q_rect.py  q_root_item.py  q_text.py  qitem.py
qlet/ncomps/core/: cached_classproperty.py  colour.py  customizer.py  item.py  null_value.py
scripts/sh/: build.sh  test.sh
